--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -180,8 +180,9 @@ body {
 }
 
 .jumbotron__subheader--error {
-  text-align: left;
   padding-top: 32%;
+  font-size: 21px;
+  text-align: left;
 }
 
 .jumbotron__img {
@@ -192,6 +193,10 @@ body {
   width: 100%;
   height: 600px; /*same height as jumbotron */
   margin: 0;  
+}
+
+.jumbotron__img--home {
+  background: url('../img/home_jumbo.png') no-repeat center center;
 }
 
 .jumbotron__img--faculty {
@@ -219,7 +224,7 @@ body {
 }
 
 .jumbotron__img--stories {
- background: url('../img/stories.png') no-repeat center center; 
+ background: url('../img/stories.png') no-repeat center center;
 }
 
 .jumbotron__img--faq {
@@ -275,6 +280,11 @@ body {
   background: #00B1EC;
 }
 
+.jumbotron__home {
+  margin-left:37.5%;
+  margin-top: 30px;
+}
+
 /*
 * Pricing table and their details
 */
@@ -284,6 +294,71 @@ body {
   background-color: #E4EEF0;
 }
 
+/*
+* Embibe is for everyone.
+*/
+.for-everyone {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.for-everyone__container {
+  margin: 0 auto;
+  max-width: 1200px;
+}
+
+.for-everyone__header {
+  font-size: 50px;
+}
+
+.for-everyone__subheader {
+  font-size: 18px;
+}
+
+.for-everyone__blocks {
+  position: relative;
+  width: 100%;
+  vertical-align: bottom;
+}
+
+.for-everyone__ref {
+  width: 12%;
+  display: inline-block;
+}
+
+.for-everyone__block {
+  width: 21%;
+  display: inline-block;
+}
+
+.for-everyone__block--std1 {
+  height: 300px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: #E4EEF0;
+}
+
+.for-everyone__block--std2 {
+  height: 210px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: #E4EEF0;
+}
+
+.for-everyone__block--std3 {
+  height: 180px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: #E4EEF0;
+}
+
+.for-everyone__block--std4 {
+  height: 150px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-color: #E4EEF0;
+}
 
 /*
 * Features of the Embibe
@@ -312,12 +387,9 @@ body {
 
 .feature__detail {
 	width: 33.33%;
-  height: 300px;
+  height: 350px;
   vertical-align: bottom;
   text-align: center;
-}
-
-.feature__detail {
   display: inline-block;
   vertical-align: middle;
 }
@@ -668,6 +740,7 @@ body {
 
 .faq {
   height: 480px;
+  margin-top: 50px;
   outline: 0;
 }
 .faq__container {
@@ -677,6 +750,8 @@ body {
 
 .add-feature {
   height: 400px;
+  margin-top: 50px;
+  outline: 0;
 }
 
 .faq__header {
@@ -754,7 +829,63 @@ body {
 
 .carousel {
   height: 250px;
+  text-align: center;
   background-color: #006696;
+}
+
+.carousel_inner {
+  float: left;
+  width:1286px;
+  height: 250px;
+  margin: 0 auto;
+  font-size: 18px;
+  overflow: hidden;
+}
+
+#carousel_ul {
+  position:relative;
+  left:-1300px;
+  width:9999px;
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+#carousel_ul li {
+  float: left;
+  width:1281px;
+  padding:0px;
+  color: white;
+  background-color: #006696;
+}
+
+.caoursel__content {
+  width: 100%;
+  height: 200px;
+  padding: 55px;
+}
+
+#left_scroll,
+#right_scroll {
+  float:left;
+}
+
+#left_scroll i,
+#right_scroll i {
+  z-index: 1;
+  position: absolute;
+  margin-top: 100px;
+  font-size: 50px;
+  color: white;
+  cursor: pointer;
+}
+
+#left_scroll i {
+  margin-left: 8%;
+}
+
+#right_scroll i {
+  margin-left: -8%;
 }
 
 /*
