--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -136,7 +136,7 @@ body {
 */
 
 .jumbotron__header {
-  padding-top: 125px;
+  padding-top: 75px;
   font-size: 70px;
   text-align: center;
 }
@@ -185,65 +185,61 @@ body {
   text-align: left;
 }
 
-.jumbotron__img {
-  position: absolute;
-  top:0;
-  left:0;
-  z-index: -1;
-  width: 100%;
-  height: 600px; /*same height as jumbotron */
-  margin: 0;
+.jumbotron {
+  height: 550px;
+  color: white;
 }
 
-.jumbotron__img--home {
+.jumbotron__img-home {
   background: url('../img/home_jumbo.png') no-repeat center center;
+  background-size: cover;
 }
 
-.jumbotron__img--faculty {
+.jumbotron__img-faculty {
   background: url('../img/books.png') no-repeat center center;
+  background-size: cover;
 }
 
-.jumbotron__img--parents {
+.jumbotron__img-parents {
   background: url('../img/parents.png') no-repeat center center;
+  background-size: cover;
 }
 
-.jumbotron__img--aboutus {
+.jumbotron__img-aboutus {
   background: url('../img/aboutus.png') no-repeat center center;
+  background-size: cover;
 }
 
-.jumbotron__img--IIT_JEE {
+.jumbotron__img-IIT_JEE {
   background: url('../img/IIT_JEE.png') no-repeat center center;
+  background-size: cover;
 }
 
-.jumbotron__img--pricing {
+.jumbotron__img-pricing {
   background: url('../img/pricing_jumbo.png') no-repeat center center;
+  background-size: cover;
 }
 
-.jumbotron__img--error {
+.jumbotron__img-error {
  background: url('../img/error.png') no-repeat center center;
+ background-size: cover;
 }
 
-.jumbotron__img--stories {
+.jumbotron__img-stories {
  background: url('../img/stories.png') no-repeat center center;
+ background-size: cover;
 }
 
-.jumbotron__img--faq {
+.jumbotron__img-faq {
   background-color: #006695;
 }
 
-.jumbotron__img--tos {
+.jumbotron__img-tos {
   background-color: #009858;
 }
 
-.jumbotron__img--privacy {
+.jumbotron__img-privacy {
   background-color: #FF9600;
-}
-
-.jumbotron {
-  height: 503px;
-  margin: 0;
-  color: white;
-  background:transparent;
 }
 
 .jumbotron__container {
@@ -252,18 +248,19 @@ body {
 }
 
 .jumbotron__free-signup {
-  margin-left: 41%;
+  display: block;
   width: 200px;
+  margin: 0 auto;
   padding: 10px 10px;
   font-size: 14px;
-  color: grey;
+  color: white;
   text-decoration: none;
-  background: white;
+  background: #00B1EC;
   -webkit-border-radius: 18px;
   -moz-border-radius: 18px;
   border-radius: 18px;
   border: 0px;
-  -moz-transition: background-color 0.5s ease;
+  -moz-transition:  background-color 0.5s ease;
      -o-transition: background-color 0.5s ease;
     -ms-transition: background-color 0.5s ease;
         transition: background-color 0.5s ease;
@@ -273,17 +270,177 @@ body {
         transition: background-color 0.5s ease;
 }
 
-.jumbotron__free-signup:hover {
+.jumbotron__btn-list {
+  text-decoration: none;
+  padding:20px 300px;
+  text-align: center;
+}
+
+.jumbotron__list {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+ .jumbotron__subject {
+  width: 130px;
+  margin-left: 10px;
+  margin-right: 10px;
   color: white;
+  background: transparent;
+  border: 1px solid white;
+ }
+
+.jumbotron__free-signup:hover {
+  color: #4E4E50;
   text-decoration: none;
   cursor: pointer;
-  background: #00B1EC;
+  background:white;
 }
 
 .jumbotron__home {
   margin-left:37.5%;
   margin-top: 30px;
 }
+
+/*
+* work-process
+*/
+.work-process__container {
+  position: relative;
+  margin: 0 auto;
+  width: 1200px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.work-process__header {
+  font-size: 20px;
+}
+
+.work-process__list {
+  display: inline-block;
+  width: 25%;
+}
+
+.work-process__image {
+  list-style-type: none;
+}
+
+.work-process__name {
+  color: #00B1EC;
+  font-size: 17px;
+}
+
+/*
+* Practice - home page
+*/
+
+.home-work {
+  height: 230px;
+}
+
+.home-method__test-part {
+  display: inline-block;
+  width: 50%;  
+  font-size: 18px;
+}
+
+.home-method__part-container {
+  margin: 100px auto;
+  width: 450px;
+}
+
+.home-details__header {
+  margin-left: 22px;
+}
+
+.home-method__container {
+  margin: 0 auto;
+  width: 1200px;
+}
+
+.home-method__detail-header {
+  margin-left: 22px;
+  font-size: 50px;
+  color: #FF4949;
+}
+
+.home-method__list {
+  font-size: 20px;
+}
+
+.home-work__practice {
+  background: url('../img/home_image1.png') no-repeat center center;
+  background-size: cover;
+}
+
+.home-work__container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.home-work__analysis {
+  background: url('../img/home_image2.png') no-repeat center center;
+  background-size: cover;
+}
+
+.home-work__revise {
+  background: url('../img/home_image3.png') no-repeat center center;
+  background-size: cover; 
+}
+
+.home-work__test {
+  background: url('../img/home_image4.png') no-repeat center center;
+  background-size: cover; 
+}
+
+.home__button {
+  display: block;
+  width: 300px;
+  margin-left: 25px;
+  padding: 10px 10px;
+  font-size: 15px;
+  color: white;
+  text-decoration: none;
+  -webkit-border-radius: 18px;
+  -moz-border-radius: 18px;
+  border-radius: 18px;
+  border: 0px;
+  -moz-transition:  background-color 0.5s ease;
+     -o-transition: background-color 0.5s ease;
+    -ms-transition: background-color 0.5s ease;
+        transition: background-color 0.5s ease;
+  -moz-transition: color 0.5s ease;
+     -o-transition: color 0.5s ease;
+    -ms-transition: background-color 0.5s ease;
+        transition: background-color 0.5s ease;
+}
+
+.home__practice-button {
+  background-color: #FFB800;
+}
+
+.home__analys-button {
+  background-color: #8300CE;
+}
+
+.home__video-button {
+  background-color: #009858;
+}
+
+.home__test-button {
+  background-color: #FF4949;
+}
+
+/*
+* Details about method and selection
+*/
+
+.home-method {
+  height: 650px;
+}
+
 
 /*
 * Pricing table and their details
@@ -371,6 +528,16 @@ body {
   position:absolute;
   bottom:0;
   display: inline-block;
+}
+
+.successful-student__image {
+  left: 10px;
+  bottom: 10px;
+}
+
+.successful-student__detail {
+  right: 10px;
+  bottom: 30px;
 }
 
 .successful-student__image {
@@ -741,6 +908,8 @@ body {
   height: 500px;
   overflow-x:hidden;
   overflow-y:hidden;
+  background: url("../img/video.png") no-repeat center center;
+  background-size:cover;
 }
 
 /*
@@ -752,10 +921,19 @@ body {
   margin: 0;
   color: white;
 }
+.quote--pricing{
+  background: url("../img/pricing.png") no-repeat center center;
+  background-size:cover;
+}
 
-.quote__quote-image {
-  position: absolute;
-  width: 100%;
+.quote--IIT_JEE{
+  background: url("../img/pricing.png") no-repeat center center;
+  background-size:cover;
+}
+
+.quote--stories {
+  background: url("../img/stories.png") no-repeat center center;
+  background-size:cover; 
 }
 
 .quote__quote {
