--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -54,7 +54,7 @@ body {
   display: none;
 }
 
-.popupContainer{
+.popup{
   position:absolute;
   width:600px;
   height: auto;
@@ -64,7 +64,7 @@ body {
   border-radius: 10px;
 }
 
-.popupBody {
+.popup__body {
   margin-top: -150px;
   padding:20px;
   background-color: #E3E6E7;
@@ -76,19 +76,19 @@ body {
   text-align: center;
 }
 
-.popup-fb {
+.popup__fb {
   width: 100%;
   height: 94px;
   margin: 0;
   padding: 20px;
 }
 
-.popup-fb__fb-logo {
+.popup__fb-fb-logo {
   width: 15%;
   display: inline-block;
 }
 
-.popup-fb__fb-login {
+.popup__fb-fb-login {
   width: 85%;
   display: inline-block;
   margin-left: -5px;
@@ -103,6 +103,7 @@ body {
   font-size: 20px;
   color: white;
   text-decoration: none;
+  outline: none;
   -webkit-border-radius: 27px;
   -moz-border-radius: 27px;
   border-radius: 27px;
@@ -110,25 +111,31 @@ body {
   background-color: #2F4C9A;
 }
 
-.form {
+.fb-login:hover ,
+.fb-login:active ,
+.fb-login:visited {
+  outline: none;
+}
+
+.popup__form {
   padding-left: 20px;
   padding-right: 2px;
   padding-bottom: 20px;
 }
 
-.form_part {
+.popup__form_part {
   height: 50px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
 
-.form-part__image {
+.popup__form-part-image {
   display: inline-block;
   width: 8%;
   vertical-align: bottom;
 }
 
-.form-part__input {
+.popup__form-part-input {
   display: inline-block;
   width: 92%;
   margin-left: -5px;
@@ -151,7 +158,7 @@ body {
      -moz-border-radius: 25px;
 }
 
-.t_p {
+.popup__t_p {
   margin-top: 20px;
   color: black;
   font-size: 15px;
@@ -168,11 +175,18 @@ body {
   margin: 0 auto;
   margin-top: 10px;
   margin-bottom: 20px;
+  outline: none;
   font-size: 20px;
   background-color: #00B1EC;
 }
 
-.already-member {
+.popup--signup:active ,
+.popup--signup:hover ,
+.popup--signup:visited {
+  outline: none;
+}
+
+.popup__already-member {
   text-align: center;
   font-size: 18px;
 }
